# mesa-mesa

./: .clang-format-include  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  .mr-label-maker.yml  .pick_status.json  CODEOWNERS  Makefile  PRESUBMIT.cfg  VERSION  clippy.toml  configure.ac  meson.build  meson.options  meson_options.txt
src/amd/lanczoslib/: lanczos_adaptor.cpp  lanczos_adaptor.h  meson.build
src/asahi/isa/: AGX2.xml  agx_minifloat.h  disasm-internal.h  disasm.h  gen-disasm.py  isa.py  meson.build  test-disasm.py
src/asahi/libagx/: compression.cl  compression.h  copy.cl  draws.cl  geometry.cl  geometry.h  helper.cl  helper.h  libagx.h  libagx_dgc.h  libagx_intrinsics.h  meson.build  query.cl  query.h  tessellation.cl  tessellator.cl  tessellator.h  texture.cl
src/freedreno/computerator/: a4xx.cc  a6xx.cc  ir3_asm.cc  ir3_asm.h  main.cc  main.h  meson.build
src/gfxstream/guest/: meson.build
src/imagination/: .clang-format  meson.build
src/imagination/common/: meson.build  pvr_device_info.c  pvr_device_info.h  pvr_dump.h  pvr_dump_info.c  pvr_iface.h  pvr_limits.h  pvr_util.h
src/imagination/csbgen/: gen_pack_header.py  meson.build  pvr_packet_helpers.h
src/imagination/pco/: meson.build  pco.c  pco.h  pco_binary.c  pco_bool.c  pco_builder.h  pco_builder_ops.h.py  pco_cf.c  pco_common.h.py  pco_const_imms.c  pco_data.h  pco_debug.c  pco_end.c  pco_group_instrs.c  pco_index.c  pco_info.c.py  pco_internal.h  pco_ir.c  pco_isa.h.py  pco_isa.py  pco_legalize.c  pco_map.h.py  pco_map.py  pco_nir.c  pco_nir_algebraic.py  pco_nir_compute.c  pco_nir_io.c  pco_nir_lower_null_descriptors.c  pco_nir_pvfio.c  pco_nir_sync.c  pco_nir_tex.c  pco_nir_vk.c  pco_ops.h.py  pco_ops.py  pco_opt.c  pco_print.c  pco_pygen_common.py  pco_ra.c  pco_schedule.c  pco_trans_nir.c  (+1 more)
src/imagination/rogue/: rogue.c  rogue.h  rogue_build_data.c  rogue_compile.c  rogue_encode.c  rogue_nir.c  rogue_print.c
src/imagination/vulkan/: meson.build  pvr_arch_border.c  pvr_arch_cmd_buffer.c  pvr_arch_cmd_query.c  pvr_arch_csb.c  pvr_arch_descriptor_set.c  pvr_arch_device.c  pvr_arch_formats.c  pvr_arch_framebuffer.c  pvr_arch_hw_pass.c  pvr_arch_image.c  pvr_arch_job_common.c  pvr_arch_job_compute.c  pvr_arch_job_context.c  pvr_arch_job_render.c  pvr_arch_job_transfer.c  pvr_arch_mrt.c  pvr_arch_pass.c  pvr_arch_pipeline.c  pvr_arch_query_compute.c  pvr_arch_queue.c  pvr_arch_sampler.c  pvr_arch_spm.c  pvr_arch_tex_state.c  pvr_blit.c  pvr_blit.h  pvr_bo.c  pvr_border.c  pvr_border.h  pvr_buffer.h  pvr_clear.c  pvr_clear.h  pvr_cmd_buffer.c  pvr_cmd_buffer.h  pvr_cmd_query.c  pvr_common.h  pvr_csb.c  pvr_csb.h  pvr_csb_enum_helpers.h  pvr_descriptor_set.c  (+61 more)
src/imgui/: meson.build
src/intel/compiler/: brw_analysis.cpp  brw_analysis.h  brw_analysis_def.cpp  brw_analysis_liveness.cpp  brw_analysis_performance.cpp  brw_asm.c  brw_asm_internal.h  brw_asm_tool.c  brw_builder.cpp  brw_builder.h  brw_cfg.cpp  brw_cfg.h  brw_compile_bs.cpp  brw_compile_cs.cpp  brw_compile_fs.cpp  brw_compile_gs.cpp  brw_compile_mesh.cpp  brw_compile_tcs.cpp  brw_compile_tes.cpp  brw_compile_vs.cpp  brw_compiler.c  brw_compiler.h  brw_debug_recompile.c  brw_device_sha1_gen_c.py  brw_disasm.c  brw_disasm.h  brw_disasm_info.cpp  brw_disasm_info.h  brw_disasm_tool.c  brw_eu.c  brw_eu.h  brw_eu_compact.c  brw_eu_defines.h  brw_eu_emit.c  brw_eu_inst.h  brw_eu_validate.c  brw_from_nir.cpp  brw_fs.cpp  brw_fs.h  brw_fs_builder.h  (+127 more)
src/intel/decoder/: intel_batch_decoder.c  intel_batch_decoder_brw.c  intel_decoder.c  meson.build
src/intel/mda/: debug_archiver.c  debug_archiver.h  mda.c  meson.build  slice.c  slice.h  slice_test.cpp  slice_test.h  tar.c  tar.h  tar_test.cpp
src/intel/nullhw-layer/: VkLayer_INTEL_nullhw.json.in  intel_nullhw.c  meson.build
src/kosmickrisp/: .clang-format  kosmicomp.c  meson.build
src/kosmickrisp/bridge/: meson.build  mtl_bridge.h  mtl_bridge.m  mtl_buffer.h  mtl_buffer.m  mtl_command_buffer.h  mtl_command_buffer.m  mtl_command_queue.h  mtl_command_queue.m  mtl_compute_state.h  mtl_compute_state.m  mtl_device.h  mtl_device.m  mtl_encoder.h  mtl_encoder.m  mtl_format.h  mtl_heap.h  mtl_heap.m  mtl_library.h  mtl_library.m  mtl_render_state.h  mtl_render_state.m  mtl_residency_set.h  mtl_residency_set.m  mtl_sampler.h  mtl_sampler.m  mtl_sync.h  mtl_sync.m  mtl_texture.h  mtl_texture.m  mtl_types.h  vk_to_mtl_map.c  vk_to_mtl_map.h
src/kosmickrisp/compiler/: meson.build  msl_iomap.c  msl_nir_algebraic.py  msl_nir_lower_common.c  msl_nir_lower_subgroups.c  msl_private.h  msl_type_inference.c  nir_to_msl.c  nir_to_msl.h
src/kosmickrisp/util/: kk_dispatch_trampolines_gen.py  meson.build
src/kosmickrisp/vulkan/: kk_bo.c  kk_bo.h  kk_buffer.c  kk_buffer.h  kk_buffer_view.c  kk_buffer_view.h  kk_cmd_buffer.c  kk_cmd_buffer.h  kk_cmd_clear.c  kk_cmd_copy.c  kk_cmd_dispatch.c  kk_cmd_draw.c  kk_cmd_meta.c  kk_cmd_pool.c  kk_cmd_pool.h  kk_debug.c  kk_debug.h  kk_descriptor_set.c  kk_descriptor_set.h  kk_descriptor_set_layout.c  kk_descriptor_set_layout.h  kk_descriptor_types.h  kk_device.c  kk_device.h  kk_device_lib.c  kk_device_memory.c  kk_device_memory.h  kk_encoder.c  kk_encoder.h  kk_event.c  kk_event.h  kk_format.c  kk_format.h  kk_image.c  kk_image.h  kk_image_layout.c  kk_image_layout.h  kk_image_view.c  kk_image_view.h  kk_instance.c  (+24 more)
src/loader/: loader.c  loader_dri3_helper.c  loader_dri3_helper.h  loader_dri_helper.c  loader_dri_helper.h  loader_wayland_helper.c  loader_wayland_helper.h  meson.build
src/mapi/glapi/: glapi.h  glapi_getproc.c  glapi_nop.c  libgl_public.c  meson.build
src/mapi/shared-glapi/: core.c  glapi.c  meson.build  stub.c  stub.h  table.c  table.h
src/mesa/main/: accum.c  api_exec.c  arbprogram.c  atifragshader.c  attrib.c  blend.c  blend.h  blit.c  bufferobj.c  bufferobj.h  buffers.c  clip.c  compute.c  config.h  conservativeraster.c  consts_exts.h  context.c  context.h  dd.h  debug.c  (+113 more)
src/microsoft/: meson.build
src/nouveau/: meson.build
src/x11/: meson.build  x11_display.c  x11_display.h  x11_dri3.c  x11_dri3.h
(+5851 files in other folders)
